<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.view.DetailUserFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_arrow_back_black_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/img_arrow_back"
        app:layout_constraintStart_toEndOf="@id/img_arrow_back"
        app:layout_constraintTop_toTopOf="@id/img_arrow_back"
        tools:text="abdanzaki" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_github_logo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/github_logo_mark_black_32"
        app:layout_constraintBottom_toBottomOf="@id/img_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_arrow_back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_user"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_arrow_back"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_title_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/followers"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/img_profile_user"
        app:layout_constraintTop_toTopOf="@id/img_profile_user" />

    <TextView
        android:id="@+id/tv_body_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_followers"
        app:layout_constraintStart_toStartOf="@id/tv_title_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_title_followers"
        tools:text="112" />

    <TextView
        android:id="@+id/tv_title_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/following"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_title_followers"
        app:layout_constraintTop_toTopOf="@id/tv_title_followers" />

    <TextView
        android:id="@+id/tv_body_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_following"
        app:layout_constraintStart_toStartOf="@id/tv_title_following"
        app:layout_constraintTop_toBottomOf="@id/tv_title_following"
        tools:text="100" />

    <TextView
        android:id="@+id/tv_title_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/repository"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tv_title_following"
        app:layout_constraintTop_toTopOf="@id/tv_title_following" />

    <TextView
        android:id="@+id/tv_body_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_repository"
        app:layout_constraintStart_toStartOf="@id/tv_title_repository"
        app:layout_constraintTop_toBottomOf="@id/tv_title_repository"
        tools:text="10" />

    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/img_profile_user"
        app:layout_constraintTop_toBottomOf="@id/img_profile_user"
        tools:text="Abdan Zaki Alifian" />

    <TextView
        android:id="@+id/tv_title_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_name_user"
        app:layout_constraintTop_toBottomOf="@id/tv_name_user" />

    <TextView
        android:id="@+id/tv_body_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title_bio"
        app:layout_constraintTop_toTopOf="@id/tv_title_bio"
        tools:text="Android Developer" />

    <TextView
        android:id="@+id/tv_title_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/company"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_bio"
        app:layout_constraintTop_toBottomOf="@id/tv_body_bio" />

    <TextView
        android:id="@+id/tv_body_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title_company"
        app:layout_constraintTop_toTopOf="@id/tv_title_company"
        tools:text="Google Inc." />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_body_company"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@color/grey_loading"
        app:tabSelectedTextColor="@color/white"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>